--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   logstash_aws:
-    image: harbor.flexcore.mx/com.mx.fintecheando.logstash.aws
+    image: fintecheando/aws:main
     volumes:
       - ./logpush.conf:/tmp/logpush.conf
     restart: always
